2009-10-01  Victor Wang  <victorw@chromium.org>

Reviewed by Oliver Hunt.

        Allow dragging a node who has child nodes.

        https://bugs.webkit.org/show_bug.cgi?id=28632

        * fast/events/drag-parent-node-expected.txt: Added.
        * fast/events/drag-parent-node.html: Added.
        * fast/events/resources/bookmark.gif: Added.
2009-10-01  Victor Wang  <victorw@chromium.org>

        Reviewed by Oliver Hunt.

        Allow dragging a node who has child nodes.

        https://bugs.webkit.org/show_bug.cgi?id=28632

        Test: fast/events/drag-parent-node.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::shouldDragAutoNode):

Canonical link: https://commits.webkit.org/40540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48981 268f45cc-cd09-0410-ab3c-d52691b4dbfc